--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "leaflet": "^1.9.4",
+    "leaflet-fullscreen": "^1.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
+    "react-leaflet-fullscreen-plugin": "^1.0.1",
     "react-leaflet-markercluster": "^3.0.0-rc1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
