--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "leaflet": "^1.9.4",
+    "leaflet-distortableimage": "^0.21.9",
+    "leaflet-draw": "^1.0.4",
+    "leaflet-editable": "^1.3.0",
     "leaflet-fullscreen": "^1.0.2",
+    "leaflet-path-drag": "^1.9.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-leaflet-control": "^2.1.2",
+    "react-leaflet-draw": "^0.20.4",
     "react-leaflet-fullscreen-plugin": "^1.0.1",
     "react-leaflet-markercluster": "^3.0.0-rc1",
     "react-scripts": "5.0.1",
