--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
+    "react-leaflet-cluster": "^2.1.0",
     "react-leaflet-control": "^2.1.2",
     "react-leaflet-fullscreen-plugin": "^1.0.1",
     "react-leaflet-markercluster": "^3.0.0-rc1",
